--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5934,6 +5934,9 @@ h1.success, h2.success, h3.success, h4.success, h5.success {
       color: #0779be;
       text-shadow: 0 0 2px rgba(7, 121, 190, 0.5); }
 
+a.cancel:hover span {
+  color: #e02027; }
+
 div.view-cart-row span {
   position: relative;
   display: inline-block; }
