POS UI nearly rebuilt, order confirmation success logic added to front-end

--- a/webroot/scss/globals.scss
+++ b/webroot/scss/globals.scss
@@ -8,12 +8,12 @@ body {
   background-image:url('../img/splash/pizza-bg.jpg');
   background-size:cover;
   background-repeat:no-repeat;
-  background-position:fixed;
+  background-position:static;
 }
 body#vendor {
   width:100%;
   height:100%;
-  background-image:url("sadfsdfsf") !important;
+  background-image: none;
   background-color:$text-grey;
   color:$white;
   z-index:99999999999;
@@ -44,7 +44,18 @@ body#vendor {
   @media #{$xlarge-up} {
     overflow:hidden;
    }
+
+
 }
+  #loading-img {
+    transition : opacity 0.1s;
+    position   : absolute;
+    top:50%;
+    left:50%;
+    margin-top: -12.5%;
+    height: 25%;
+    z-index:9999;
+  }
 
 
 * { transition : background-color $global-transition-time ease-in-out,
