--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5039,12 +5039,12 @@ body {
   background-image: url('../img/splash/pizza-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: fixed; }
+  background-position: static; }
 
 body#vendor {
   width: 100%;
   height: 100%;
-  background-image: url("sadfsdfsf") !important;
+  background-image: none;
   background-color: #373737;
   color: white;
   z-index: 99999999999; }
@@ -5070,6 +5070,15 @@ body#vendor {
   @media only screen and (min-width:90.063em) {
     #page-content {
       overflow: hidden; } }
+
+#loading-img {
+  transition: opacity 0.1s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -12.5%;
+  height: 25%;
+  z-index: 9999; }
 
 * {
   transition: background-color 0.3s ease-in-out, background-image 0.3s ease-in-out, color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out; }
@@ -5577,11 +5586,10 @@ footer#footer {
       width: 25%;
       max-width: 5rem; }
 
-body#vendor {
-  background-color: #191919; }
-  body#vendor #topbar, body#vendor #footer, body#vendor h4.loading {
-    display: none; }
-  body#vendor * {
+body#pos {
+  background-color: #191919;
+  background: none; }
+  body#pos * {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -5589,7 +5597,7 @@ body#vendor {
     -ms-user-select: none;
     user-select: none; }
 
-main#vendor-page {
+main#pos-container {
   padding-top: 3.75rem;
   width: 37.5rem; }
 
