--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -542,3 +542,5 @@ span.tiny-opt, span.tiny-opt-label {
  }
 
  .warning { color: $alert-color !important;}
+
+ span#order-ready-time { color: $xtreme-blue; @include HelveticaBlkCn;}
