--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -2,11 +2,18 @@
   0% {
     -webkit-transform: scale(1,1);
     background-color: $xtreme-blue;
+    opacity:1;
   }
   25% {
     -webkit-transform: scale(0.5, 0.5);
     background-color: $xtreme-red;
+    opacity:1;
   }
+  100% {
+      -webkit-transform: scale(1, 1);
+      background-color: $xtreme-blue;
+      opacity:1;
+    }
 }
 .modal-load-dot {
   background-color:$xtreme-blue;
@@ -15,12 +22,13 @@
   border-radius:1000px;
   display:inline-block;
   margin:0.5rem;
+  opacity:0;
 }
 
-#load-dot-1 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0s running forwards;}
-#load-dot-2 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.25s running forwards;}
-#load-dot-3 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.5s running forwards;}
-#load-dot-4 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.75s running forwards;}
+#load-dot-1 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 4s running forwards;}
+#load-dot-2 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 4.25s running forwards;}
+#load-dot-3 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 4.5s running forwards;}
+#load-dot-4 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 4.75s running forwards;}
 
 #modal-overlay-container {
   position         : fixed;
